--- a/kremturo.html
+++ b/kremturo.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
-<html>
-    <head lang="hu">
+<html lang="hu">
+    <head>
         <title>A Nagy Kommunista Enciklopédia</title>
         <style type="text/css">
             table {
 	           border-collapse: collapse;
-                font-family: Tahoma, Geneva, sans-serif;
-}
+	           font-family: Tahoma, Geneva, sans-serif;
+            }
             table td {
 	           padding: 15px;
-}
+            }
             th {
 	           background-color: black;
 	           color: ghostwhite;
 	           font-weight: bold;
-	           font-size: 13px;
+	           padding: 15px;
 	           border: 1px solid #54585d;
-}
+            }
             table tbody td {
 	           color: #636363;
 	           border: 1px solid #dddfe1;
-}
+            }
             table tbody tr {
 	           background-color: #f9fafb;
-}
+            }
             table tbody tr:nth-child(odd) {
 	           background-color: #ffffff;
-}
+            }
         </style>
     </head>
     <body>
-        <img src="asdasdasd.jpg" alt="Kommunista enciklopédia?"><br><br>
+        <img src="asdasdasd.jpg" height="500" alt="Kommunista enciklopédia?"><br><br>
         <table class="wikitable" border="1">
             <tbody><tr>
                 <th align="center"><b>Eredeti cím</b>
@@ -124,7 +124,9 @@
                     <td><i>Észt Szovjet Enciklopédia</i></td>
                     <td align="right">8</td>
                     <td>1968–1976
-            </td></tr></tbody></table>
+                    </td></tr>
+            </tbody>
+        </table>
         
     </body>
 </html>
