--- a/kremturo.html
+++ b/kremturo.html
@@ -6,6 +6,7 @@
             table {
 	           border-collapse: collapse;
 	           font-family: Tahoma, Geneva, sans-serif;
+	           margin-left: 15px;
             }
             table td {
 	           padding: 15px;
@@ -30,7 +31,6 @@
         </style>
     </head>
     <body>
-        <img src="asdasdasd.jpg" height="500" alt="Kommunista enciklopédia?"><br><br>
         <table class="wikitable" border="1">
             <tbody><tr>
                 <th align="center"><b>Eredeti cím</b>
@@ -127,6 +127,5 @@
                     </td></tr>
             </tbody>
         </table>
-        
     </body>
 </html>
